# YouTubeSorter

./: README.md  Youtube-OAuth-client_secret.json  docker-compose.yml  env.dev  list_videos.py  pyproject.toml  setup.cfg
YoutubeSort/: .env.dev  .envrc  Dockerfile  Youtube-OAuth-client_secret.json  docker-entrypoint.sh  manage.py  youtube.com_cookies.txt
YoutubeSort/YoutubeAuth/: admin.py  apps.py  backends.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
YoutubeSort/YoutubeAuth/migrations/: 0001_initial.py  0002_alter_credentials_client_id.py  0002_auto_20220309_2018.py  0003_alter_credentials_options_alter_credentials_email_and_more.py  0004_alter_credentials_options_and_more.py  0005_alter_credentials_client_id_alter_credentials_email.py  0006_alter_credentials_scopes.py  0007_alter_credentials_scopes.py  0008_alter_credentials_scopes.py  0009_alter_credentials_scopes.py
YoutubeSort/YoutubeSort/: admin.py  api.py  asgi.py  celery.py  consumer.py  models.py  routing.py  settings.py  settings.py.orig  tasks.py  urls.py  util.py  views.py  wsgi.py
YoutubeSort/YoutubeSort/migrations/: 0001_initial.py  0002_youtubevideo_user.py  0003_youtubevideo_artist_youtubevideo_track.py  0004_alter_youtubevideo_artist_alter_youtubevideo_track_and_more.py  0005_youtubevideo_image_url.py  0006_youtubevideo_created_at_youtubevideo_updated_at.py  0007_alter_youtubevideo_created_at_and_more.py  0008_youtubeplaylist.py  0009_alter_youtubeplaylist_image_url_and_more.py  (+1 more)
YoutubeSort/templates/: index.html
